* $wgExtNewTables, $wgExtNewFields, $wgExtNewIndexes, $wgExtPGNewFields,
  $wgExtPGAlteredFields, $wgExtModifiedFields — These settings were removed.
  They became obsolete after 1.17 overhauled the database updater, but were kept
  for backwards compatibility. The LoadExtensionSchemaUpdates hook should be
  used instead.
* $wgEnableRestAPI - This setting, ignored since 1.35, has been removed.
* …

=== New user-facing features in 1.36 ===
* All HTML5 named entities are now accepted in wikitext.
* …

=== New developer features in 1.36 ===
* Parser test files can now declare a dependency on a specific extension
  being loaded, not just on the presence of a certain extension tag hook.
  This is a better fit for extensions like TimedMediaHandler, which affect
  the output but don't register parser hooks.  Use `extension:Foo` in
  the `!! hooks` section of your parser test file to declare a dependency
  on the `Foo` extension being loaded.
* To expose code previously present in SpecialBlock/SpecialUnblock
  to other parts of the code, or to extensions,
  the new BlockUser and UnblockUser command objects were added.
  Use the BlockUserFactory and UnblockUserFactory services to create them.
* The hook UsersPagerDoBatchLookupsHook takes now a \Wikimedia\Rdbms\IDatabase
  instead of \Wikimedia\Rdbms\DBConnRef as first parameter
* MediaHandlers can now customize the formatting of the metadata they emit
  by overriding MediaHandler::formatTag( $key, $value ).  The default for
  unknown tags is numeric formatting; non-EXIF tags which are non-numeric
  should always use this method to specify the desired formatting.
* The new 'title' type can be used to validate action API and REST API inputs.
* The new ArticleParserOptions hook allows customizing the parser options
  used to parse wikitext for an article, based on user preferences, title,
  etc.
* The new 'raw' type can be used to validate action API inputs. It bypasses