@@ -59,6 +59,10 @@ this is no longer recommended and the option has been removed.
   for backwards compatibility. The LoadExtensionSchemaUpdates hook should be
   used instead.
 * $wgEnableRestAPI - This setting, ignored since 1.35, has been removed.
+* $wgPagePropsHaveSortkey – This temporary setting has been removed, along with
+  the schema change upgrade path it controlled. If your site is still using it,
+  meaning you have not yet applied the `pp_sortkey` schema change from 1.24, you
+  must now apply it before upgrading.
 * …
 
 === New user-facing features in 1.36 ===
